new participant (core)

--- a/src/assets/i18n/sk.json
+++ b/src/assets/i18n/sk.json
@@ -3,9 +3,9 @@
         "home": "Splitwise",
         "participants": "Účastníci"
     },
-    "participants": {
-        "no-participants": "Žiaden účastník",
+    "participant": {
         "firstName": "Meno",
         "lastName": "Priezvisko"
-    }
+    },
+    "no-participant": "Žiaden účastník"
 }
