refaktor (material -> ng-bootstrap)

--- a/src/assets/i18n/sk.json
+++ b/src/assets/i18n/sk.json
@@ -1,11 +1,17 @@
 {
+    "brand": "Splitwise",
     "menu-items": {
-        "home": "Splitwise",
         "participants": "Účastníci"
     },
     "participant": {
         "firstName": "Meno",
         "lastName": "Priezvisko"
     },
-    "no-participant": "Žiaden účastník"
+    "no-participant": "Žiaden účastník",
+    "participants": {
+        "title": "Účastníci"
+    },
+    "new-participant": {
+        "title": "Nový účastník"
+    }
 }
